improved the usermanager demo

--- a/ch6/usermanager/resources/templates/home.html
+++ b/ch6/usermanager/resources/templates/home.html
@@ -14,9 +14,10 @@
               onclick="window.location.href = '/useradd';"
               value="Add User" /></br>
        </br>
-       <!-- <input type="submit" class="btn btn-primary" -->
-       <!--          value="Delete User" /></br> -->
-
+       <input type="submit" class="btn btn-primary"
+              onclick="window.location.href = '/userdelete';"
+              value="Delete User" /></br>
+       </br>
     </div>
 
   </div>
