--- a/ch6/usermanager/resources/templates/searchuser.html
+++ b/ch6/usermanager/resources/templates/searchuser.html
@@ -6,7 +6,8 @@
 
   <div class="row">
     <div class="span12">
-        <form method="POST" action="/">
+      <form method="POST" action="/searchresult">
+        {% csrf-field %}
                 <p>
                     Name:
                     <input class="form-control"
