--- a/ch6/usermanager/resources/templates/useradded.html
+++ b/ch6/usermanager/resources/templates/useradded.html
@@ -5,15 +5,14 @@
   </div>
 
   <div class="row">
-    <div class="span12">
-      Name:
-      value="{{name}}"
+    <div class="span12" name="name"> 
+      {{name}}
     </div>
   </div>
   <div class="row">
-    <div class="span12">
-      Surname:
-      value="{{surname}}"
+    <div class="span12" name="surname">
+      {{surname}}
     </div>
+    added.
   </div>
 {% endblock %}
